# vue_cpp_quickstart

./: README.md  package-lock.json  package.json  vite.config.js
server/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  FILES_CHECKLIST.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  build.ps1  build.sh  vcpkg.json
server/cmake/: compiler_warnings.cmake  use_vcpkg.cmake
server/src/: config.hpp.in  main.cpp
server/src/app/: app.cpp  app.hpp
server/src/controllers/: testCtrl.cpp  testCtrl.hpp
server/src/utils/: config_reader.cpp  config_reader.hpp  logger.cpp  logger.hpp  string_utils.cpp  string_utils.hpp
src/: App.vue
src-tauri/: tauri.conf.json
src/assets/: base.css  main.css
src/components/: AppIntro.vue  CustomButton.vue  HelloWorld.vue
